# HAAP

./: .gitignore  .gitmodules  HAAP.cabal  LICENSE  README.md
css/: codeworld.css  diff.css  ghcjs-demo.css  style.css  tourney.css
docker/: ArtifactOverView.md  Dockerfile  README.md  cabal.config  ghcjs.config
docker/ghcjs/: Dockerfile  ghc.config  ghcjs.config
example/: Example.hs  HelloWorld.hs  MM.hs  MMDraw.hs  MMGame.hs  ints
example/_site/: doc.html  example.html  hlint.html  homplexity.html  ranks.html  spec.html
example/_site/codeworld/MM.jsexe/: all.js  out.js  out.stats  run.html
example/_site/codeworld/MMDraw.jsexe/: all.js  out.js  out.stats  run.html
example/_site/codeworld/MMGame.jsexe/: all.js  lib.js  out.js  out.stats  run.html
example/_site/css/: codeworld.css  ghcjs-demo.css  normalize.css  style.css
example/_site/doc/: Main.html  doc-index.html  index.html  mini_Main.html
example/_site/hpc/HPCTest/: Main.hs.html  hpc_index_alt.html
example/_site/templates/: doc.html
example/_site/torneio/: tourneys.html
example/_site/torneio/tourneys/: tourney32.html  tourney34.html  tourney47.html  tourney65.html
example/templates/: example.html
examples/gameworker/: Engine.hs  GameB.hs  Worker2.hs  Worker3.hs  Worker4.hs  gameworker.hs
examples/gameworker/Bomberman/: Engine.hs
examples/gameworker/li1g100/: Avanca.hs  Mapa.hs  Tarefa1Lib.hs  Tarefa6_li1g100.hs
examples/gameworker/li1g147/: Tarefa6_li1g147.hs
examples/gameworker/li1g147/Bomberman/: AI.hs  Engine.hs
examples/gameworker/li1g175/: Bomberman.hs  Tarefa6_li1g175.hs
examples/gameworker/site/: gameworker.html  index.html
examples/gameworker/site/css/: codeworld.css  style.css
examples/helloworld/: helloworld.hs
examples/helloworld/_site/: index.html
examples/helloworld/site/: spec.html
examples/minimalistic/: HPCTest.hs  MMDraw.hs  MMGame.hs  minimalistic.hs
examples/minimalistic/_site/: doc.html  ranks.html  spec.html
examples/minimalistic/_site/css/: style.css  tourney.css
examples/minimalistic/_site/torneio/: tourney1.html  tourney2.html  tourneys.html
examples/minimalistic/site/: doc.html  hlint.html  homplexity.html  index.html  ranks.html
examples/minimalistic/site/doc/: Main.html  doc-index.html  index-frames.html  index.html  mini_Main.html
examples/minimalistic/site/torneio/: tourney1.html  tourney2.html  tourneys.html
examples/minimalistic/templates/: minimalistic.html
examples/plab/: plab.hs
examples/plab/_site/: grupos.html  index.html  nothing.html
examples/plab/_site/grupos/: 183.html  186.html
examples/plab/_site/src/: Tarefa3_${group}.hs  Tarefa6_${group}.hs
examples/plab/oracle/: AnimateT6.hs  AnimateT6Match.hs  BotHugo.hs  BotNuno.hs  CollisionSimulator.hs  CollisionViewer.hs  Game.hs  GradeT6Match.hs  JSImages.hs  MapViewer.hs  MoveViewer.hs  OracleT1.hs  OracleT2.hs  OracleT5.hs  RunT1.hs  RunT2.hs  RunT3.hs  RunT4.hs  SimulateT6.hs  SimulateT6Match.hs  Tarefa4.hs  Tarefa6_random.hs
examples/plab/site/: grupos.html  index.html  nothing.html
examples/plab/site/css/: tourney.css
examples/plab/site/grupos/: 180.html  183.html  186.html
examples/plab/site/js/: cw-demo.js
examples/plab/site/ranks/: t3.html
examples/plab/site/src/: Tarefa1_${group}.hs  Tarefa2_${group}.hs  (+1 more)
examples/plab/templates/: grupo.html  index.html  nothing.html
examples/tourney/: tourney.hs
examples/xterm/: Anima.hs  Game.hs  Haskassonne.hs  Next.hs  Play.hs  xterm.hs
examples/xterm/site/: index.html
js/: cw-demo.js  diff.js  ghcjs-debugmode.js
src/: HAAP.hs
src/HAAP/: CmdArgs.hs  Core.hs  DB.hs  IO.hs  Lens.hs  Log.hs  Plugin.hs  Pretty.hs  Shelly.hs  Sources.hs  Template.hs  Utils.hs
src/HAAP/Code/: Brittany.hs  Debugger.hs  GHC.hs  Git.hs  HLint.hs  HPC.hs  Haddock.hs  Haskell.hs  Homplexity.hs
src/HAAP/Compiler/: GHC.hs  GHCJS.hs
src/HAAP/DB/: Acid.hs  Binary.hs  State.hs  Types.hs
src/HAAP/Doc/: Haddock.hs
src/HAAP/Parse/: IndentTree.hs
src/HAAP/Sources/: FilePath.hs  SVN.hs
src/HAAP/Test/: Rank.hs  Spec.hs  Tourney.hs
src/HAAP/Web/: Blaze.hs  Diff.hs  Hakyll.hs
templates/: codeworld.html  cw-draw-button.html  cw-draw-fixed.html  cw-draw-fullscreen.html  cw-draw.html  cw-game-console.html  cw-game-fullscreen.html  cw-game.html  diff.html  doc.html  error.html  ghcwall.html  homplexity.html  login.php  ranks.html  spec.html  specs.html  table.html  tourney.css  xterm.html
(+438 files in other folders)
