Name:               HAAP
Version:            0.0.1
Description:        Haskell Automatic Assessment Platform
License:            GPL
Author:             Hugo Pacheco
Maintainer:         Hugo Pacheco <hpacheco@gmail.com>
Bug-reports:        mailto:hpacheco@gmail.com
Stability:          experimental
Homepage:           
Category:           Education
Build-Type:         Simple
Cabal-Version:      >=1.6
Tested-with:        GHC==8.0.1
Synopsis:           Haskell Automatic Assessment Platform

Extra-Source-Files: README.txt
Data-Files: templates/*.html, templates/*.php, css/*.css, js/*.js
  
Library
  exposed-modules:
    HAAP
    HAAP.Core
    HAAP.DB
    HAAP.DB.State
    HAAP.DB.Acid
    HAAP.DB.Binary
    HAAP.IO
    HAAP.Lens
    HAAP.Log
    HAAP.Sources
    HAAP.Sources.SVN
    HAAP.Utils
    HAAP.Test.Spec
    HAAP.Test.Rank
    HAAP.Test.Tourney
    HAAP.Pretty
    HAAP.Web.Hakyll
    HAAP.Web.Blaze
    HAAP.Web.Test.Spec
    HAAP.Web.Test.Rank
    HAAP.Web.Test.Tourney
    HAAP.Doc.Haddock
    HAAP.Code.HLint
    HAAP.Code.Homplexity
    HAAP.Code.HPC
    HAAP.Web.Graphics.CodeWorld
    HAAP.Compiler.GHC
    HAAP.Compiler.GHCJS
    HAAP.Web.HTML.Table
    HAAP.Template
    HAAP.Web.PHP.Login
    HAAP.Web.HTML.Pandoc
    HAAP.Web.HTML.TagSoup
    HAAP.Code.Haskell
        
  Hs-source-dirs:   src
  Other-Modules:
    Paths_HAAP
  Build-Depends:    dlist, containers, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll == 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts

